# rgb-tk

./: .gitignore  CMakeLists.txt  README.md  arm-gcc-toolchain.cmake-old  armhf.cmake  config.yaml  controller-notes.txt  main.cpp  x86.cmake
config/: lirc-24-key.conf
libs/boost/lib/: libboost_regex.so.1.62.0  libboost_system.so.1.62.0  libboost_thread.so.1.62.0
libs/lirc/include/lirc/: config.h  paths.h
libs/lirc/lib/: libirrecord.la  libirrecord.so.0  liblirc.la  liblirc_client.la  liblirc_driver.la  liblirc_driver.so.0
libs/lirc/lib/lirc/plugins/: accent.la  atwf83.la  bte.la  creative.la  creative_infracd.la  default.la  devinput.la  dsp.la  ea65.la  file.la  girs.la  hiddev.la  i2cuser.la  irlink.la  irtoy.la  livedrive_midi.la  livedrive_seq.la  logitech.la  mouseremote.la  mp3anywhere.la  mplay.la  pcmak.la  pinsys.la  pixelview.la  silitek.la  tira.la  udp.la  uirt2.la  uirt2_raw.la  usbx.la  zotac.la
libs/lirc/sbin/: lirc-lsplugins  lircd  lircd-uinput  lircmd
libs/lirc/share/doc/lirc/lirc.org/html/: table.html
libs/lirc/share/lirc/: lirc.hwdb
libs/lirc/share/lirc/configs/: confs_by_driver.yaml
libs/lirc/share/man/man1/: ircat.1  irexec.1  irrecord.1  irsend.1  irtestcase.1  irw.1  lirc-config-tool.1  mode2.1
libs/lirc/share/man/man5/: lircrc.5
libs/lirc/share/man/man8/: lircd-setup.8  lircd-uinput.8  lircd.8  lircmd.8  lircrcd.8
libs/ncurses/lib/terminfo/a/: abm85e  adm36  altos2
libs/ncurses/lib/terminfo/c/: cit101e  cit101e-132  cit101e-n
libs/ncurses/lib/terminfo/d/: dec-vt220
libs/ncurses/lib/terminfo/e/: emu-220  exec80
libs/ncurses/lib/terminfo/h/: h29a-kc-uc  h29a-nkc-uc  hp2392  hp9845  hp98550  hpsub
libs/ncurses/lib/terminfo/m/: mt4520-rv
libs/ncurses/lib/terminfo/n/: ncsa  ncsa-m  ncsa-m-ns  ncsa-ns  netbsd6  news-33  news-33-euc  news-33-sjis  news-42  news-42-euc  news-42-sjis  news-a  nwp513  nwp517  nwp517-w
libs/ncurses/lib/terminfo/o/: o85h
libs/ncurses/lib/terminfo/p/: pcvt25w  pcvt40  pcvt43  pcvt43w  pcvtXX  putty-256color
libs/ncurses/lib/terminfo/t/: ti916-220-7  ti916-8  ti916-8-132  tvi910  tvi910+  tvi912b  tvi912b-2p  tvi912b-mc-2p  tvi912b-mc-vb  tvi912c-unk  tvi912c-vb-unk  tvi912cc  tvi920c-2p-p  tvi920c-unk  tvi920c-vb-mc  tvi920c-vb-p  tvi920c-vb-unk  tvi924  tvi92B
libs/ncurses/lib/terminfo/v/: vt200  vt220-old  vt300  vt320-k311  vt330  vt400-24  vt420  vt510pcdos  vt520
libs/ncurses/lib/terminfo/w/: wsvt25m
libs/ncurses/lib/terminfo/x/: x68k-ite
libs/ncurses/lib/terminfo/z/: z29a
libs/ncurses/share/terminfo/a/: a210  abm85  abm85h  alt5
libs/ncurses/share/terminfo/b/: basic4
libs/ncurses/share/terminfo/c/: cit101e-n132  crt-vt220
libs/ncurses/share/terminfo/d/: ddr3180
libs/ncurses/share/terminfo/g/: go140  go140w  go225
libs/ncurses/share/terminfo/h/: h29a-nkc-bc  hp2641a  hp300h  hp700-wy  hpex
libs/ncurses/share/terminfo/k/: kt7
libs/ncurses/share/terminfo/n/: ncsa-vt220  news-29  news-29-euc  news-29-sjis  news-old-unk  news-unk  news28  news28-a  news40-o  newscbm33  nwp512  nwp518-o
libs/ncurses/share/terminfo/o/: opus3n1+  otek4115
libs/ncurses/share/terminfo/p/: pcmw  pcvt25  pcvt25-color  pcvt28  pcvt28w  pcvt35  pcvt35w  pcvt40w  pcvt50  pcvt50w
libs/ncurses/share/terminfo/s/: screen.putty-256color
libs/ncurses/share/terminfo/t/: ti916-132  tvi9065  tvi912b-2p-p  tvi912c-mc  tvi912c-p  tvi912c-unk-2p  tvi912c-vb  tvi912c-vb-p  tvi920  tvi920b-2p  tvi920b-mc  tvi920b-p  tvi920b-unk-2p  tvi920b-vb  tvi920c  tvi920c-2p-mc  tvi921  tvi92D  tvipt
libs/ncurses/share/terminfo/u/: ultimaII  uniterm  uts30
libs/ncurses/share/terminfo/v/: v320n  versaterm  vt200-w  vt220-8  vt220-js  vt220-nam  vt220d  vt300-nam  vt300-w-nam  vt320-w  vt420f  vt420pc  vt420pcdos  vt510  vt510pc  vt520ansi  vt525
libs/ncurses/share/terminfo/w/: wsvt25
libs/ncurses/share/terminfo/z/: z340  z340-nam
src/: Colour.cpp  Colour.h  ColourDisplay.cpp  ColourDisplay.h  Controller44KeyState.cpp  Controller44KeyState.h  GenericController.cpp  GenericController.h  KeyboardListener.cpp  KeyboardListener.h  LircWrapper.cpp  LircWrapper.h  Queue.cpp  Queue.h  Remote44Key.cpp  Remote44Key.h  Rgb44.h  VirtualController.cpp  VirtualController.h  main.cpp
src/controller/: Controller44.cpp  Controller44.h  GenericController.cpp  GenericController.h  LircWrapper.cpp  LircWrapper.h  Remote44.cpp  Remote44.h
src/emulator/: ColourDisplay.cpp  ColourDisplay.h  KeyboardListener.cpp  KeyboardListener.h  VirtualController.cpp  VirtualController.h
src/routines/: BeatMatch.cpp  BeatMatch.h  GenericRoutine.cpp  GenericRoutine.h  Ifttt.cpp  Ifttt.h  RestServer.cpp  RestServer.h  SunriseSunset.cpp  SunriseSunset.h
test/: catch.hpp  main.cpp  tests.cpp
